--- a/page.hbs
+++ b/page.hbs
@@ -10,7 +10,7 @@
 				{{#post}}
 				<article class="{{post_class}}">
 					<div class="post-head">
-						<h1 class="post-title h2">{{{title}}}</h1>
+						<h1 class="post-title">{{{title}}}</h1>
 					</div>
 					{{#if feature_image}}
 					<div class="featured-media">
