--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -25,7 +25,7 @@
 	<div class="post-permalink">
 		<div class="pull-left tag-list">
 			{{#if tags}}
-			<i class="fa fa-folder-open-o"></i>
+			<i class="fal fa-tags"></i>
 			{{tags separator=","}}
 			{{/if}}
 		</div>
