--- a/partials/share_links.hbs
+++ b/partials/share_links.hbs
@@ -1,18 +1,18 @@
 <ul class="share-icons">
 	<!-- twitter -->
 	<li>
-		<a href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;"><i class="fa fa-twitter"></i></a>
+		<a href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;"><i class="fab fa-twitter"></i></a>
 	</li>
 	<!-- facebook -->
 	<li>
-		<a href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;"><i class="fa fa-facebook"></i></a>
+		<a href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;"><i class="fab fa-facebook"></i></a>
 	</li>
 	<!-- google plus -->
 	<li>
-		<a href="https://plus.google.com/share?url={{url absolute="true"}}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;"><i class="fa fa-google-plus"></i></a>
+		<a href="https://plus.google.com/share?url={{url absolute="true"}}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;"><i class="fab fa-google-plus"></i></a>
 	</li>
 	<!-- linkedin -->
 	<li>
-		<a href="https://www.linkedin.com/shareArticle?mini=true%26url={{url absolute="true"}}%26source={{@blog.url}}" onclick="window.open(this.href, 'linkedin-share', 'width=490,height=530');return false;"><i class="fa fa-linkedin"></i></a>
+		<a href="https://www.linkedin.com/shareArticle?mini=true%26url={{url absolute="true"}}%26source={{@blog.url}}" onclick="window.open(this.href, 'linkedin-share', 'width=490,height=530');return false;"><i class="fab fa-linkedin"></i></a>
 	</li>
 </ul>
