--- a/partials/widget-social.hbs
+++ b/partials/widget-social.hbs
@@ -5,9 +5,9 @@
 		<ul class="social">
 			<!-- start social links -->
 			<!-- replace the # with your own profile link address -->
-			<li><a href="https://hackingandslacking.com"><i class="fa fa-medium"></i></a></li>
-			<li><a href="https://twitter.com/hackersslackers"><i class="fa fa-twitter"></i></a></li>
-			<li><a href="https://plus.google.com/communities/106724509785464667119"><i class="fa fa-google-plus"></i></a></li>
+			<li><a href="https://hackingandslacking.com"><i class="fab fa-medium-m"></i></a></li>
+			<li><a href="https://twitter.com/hackersslackers"><i class="fab fa-twitter"></i></a></li>
+			<li><a href="https://plus.google.com/communities/106724509785464667119"><i class="fab fa-google-plus-g"></i></a></li>
 			<!--<li><a href="#"><i class="fa fa-linkedin"></i></a></li>-->
 			<!--<li><a href="#"><i class="fa fa-skype"></i></a></li>
 			<li><a href="#"><i class="fa  fa-pinterest"></i></a></li>
@@ -15,14 +15,14 @@
 			<li><a href="#"><i class="fa fa-vimeo-square"></i></a></li>
 			<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
 			<li><a href="#"><i class="fa fa-flickr"></i></a></li>-->
-			<li><a href="https://hackersandslackers.tumblr.com/"><i class="fa fa-tumblr"></i></a></li>
-			<li><a href="https://github.com/hackersandslackers"><i class="fa fa-github"></i></a></li>
+			<li><a href="https://hackersandslackers.tumblr.com/"><i class="fab fa-tumblr"></i></a></li>
+			<li><a href="https://github.com/hackersandslackers"><i class="fab fa-github"></i></a></li>
 			<!--<li><a href="#"><i class="fa fa-instagram"></i></a></li>-->
-			<li><a href="#"><i class="fa fa-stack-overflow"></i></a></li>
+			<li><a href="#"><i class="fab fa-stack-overflow"></i></a></li>
 			<!--<li><a href="#"><i class="fa fa-stack-exchange"></i></a></li>
 			<li><a href="#"><i class="fa fa-xing"></i></a></li>-->
 			<!--<li><a href="#"><i class="fa fa-envelope"></i></a></li>-->
-			<li><a href="{{@blog.url}}/rss/"><i class="fa fa-rss"></i></a></li>
+			<li><a href="{{@blog.url}}/rss/"><i class="fas fa-rss"></i></a></li>
 			<!-- end social links -->
 		</ul>
 	</div>
