--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -23,7 +23,7 @@
 	<!-- end main-footer -->
 	{{! Insert copyright partial}}
 	{{> copyright}}
-	<a href="#" id="back-to-top"><i class="fab fa-angle-up"></i></a>
+	<a href="#" id="back-to-top"><i class="fas fa-arrow-up"></i></i></a>
 	{{ghost_foot}}
 	<!-- scripts -->
 	<script type="text/javascript">
