--- a/post.hbs
+++ b/post.hbs
@@ -28,7 +28,7 @@
 					<footer class="post-footer clearfix">
 						<div class="pull-left tag-list">
 							{{#if tags}}
-							<i class="fab fa-tags"></i>
+							<i class="fal fa-tags"></i>
 							{{tags separator=","}}
 							{{/if}}
 						</div>
