--- a/partials/about-author.hbs
+++ b/partials/about-author.hbs
@@ -12,16 +12,16 @@
 		</div>
 		<div class="meta-info">
 			{{#if location}}
-				<span class="loaction"><i class="fa fa-home"></i>{{location}}</span>
+				<span class="loaction"><i class="fal fa-home"></i>{{location}}</span>
 			{{/if}}
 			{{#if website}}
-			<span class="website"><i class="fa fa-globe"></i><a href="{{website}}" targer="_BLANK">{{t "Website"}}</a></span>
+			<span class="website"><i class="fal fa-globe"></i><a href="{{website}}" targer="_BLANK">{{t "Website"}}</a></span>
 			{{/if}}
 			{{#if twitter}}
-			<span class="twitter"><a href="{{twitter_url}}"><i class="fa fa-twitter"></i></a></span>
+			<span class="twitter"><a href="{{twitter_url}}"><i class="fab fa-twitter"></i></a></span>
 			{{/if}}
 			{{#if facebook}}
-			<span class="facebook"><a href="{{facebook_url}}"><i class="fa fa-facebook"></i></a></span>
+			<span class="facebook"><a href="{{facebook_url}}"><i class="fab fa-facebook"></i></a></span>
 			{{/if}}
 		</div>
 		{{#if bio}}
