--- a/default.hbs
+++ b/default.hbs
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<!-- stylesheets -->
 	{{! Styles'n'Scripts }}
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:600,700|Roboto:300,400,500" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:600,700|Open+Sans:300,400,500" rel="stylesheet">
 	<script defer src="https://pro.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-+1nLPoB0gaUktsZJP+ycZectl3GX7wP8Xf2PE/JHrb7X1u7Emm+v7wJMbAcPr8Ge" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="{{asset "css/bootstrap.min.css"}}">
 	<link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}">
@@ -30,4 +30,5 @@
 	{{{body}}}
 
 	{{! insert footer partial}}
-	{{> footer}}
+
+	{{#unless post}}{{> footer}}{{/unless}}
