--- a/partials/copyright.hbs
+++ b/partials/copyright.hbs
@@ -3,7 +3,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				{{t "Copyright"}} &copy; {{date format="YYYY"}}, <a href="{{@blog.url}}">{{@blog.title}}</a>.  {{t "All right Reserved."}}
+				<span>{{t "Copyright"}} &copy; {{date format="YYYY"}}, <a href="{{@blog.url}}">{{@blog.title}}</a><span><br>
+				<span class="rights">{{t "All right Reserved"}}</span>
 			</div>
 		</div>
 	</div>
