--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -9,12 +9,12 @@
 				<!-- end first footer widget area -->
 				<!-- start second footer widget area -->
 				<div class="col-sm-4">
-					{{> widget-tagcloud}}
+					{{> widget-authors}}
 				</div>
 				<!-- end second footer widget area -->
 				<!-- start third footer widget area -->
 				<div class="col-sm-4">
-					{{> widget-flickr}}
+					{{> widget-tagcloud}}
 				</div>
 				<!-- end third footer widget area -->
 			</div>
