--- a/partials/widget-text.hbs
+++ b/partials/widget-text.hbs
@@ -2,6 +2,6 @@
 <div class="widget">
 	<h4 class="title">Welcome</h4>
 	<div class="content">
-Hackers and Slackers is a community of friends who like to build cool things... programming is simply a means to that end. Our passion for creating is matching only by our appreciation for life. </div>
+This is our a community of friends who like to build things, with programming is being the means to that end. Our passion for creating is matching only by an appreciation for the small moments we call life. </div>
 </div>
 <!-- end widget -->
