--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -8,7 +8,7 @@
 ====================================================*/
 body,
 html {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
 	color: @text-color;
 	line-height: 1.75em;
@@ -46,7 +46,7 @@ h6 {
 .h1,
 h1 {
 	font-size: 3em;
-	font-weight:800;
+	font-weight: 800;
 }
 
 .h2,
@@ -57,8 +57,10 @@ h2 {
 }
 
 .home-template h2 {
-	font-weight:800 !important;
+	font-weight: 800 !important;
 }
+
+.home-template .roundup .post-content {}
 
 .h3,
 h3 {
@@ -174,6 +176,12 @@ pre {
 	background: @theme-color;
 	text-shadow: none;
 }
+
+.tag-roundup {
+	.featured-media {
+		display: none;
+	}
+}
 /*====================================================
 	header
 ====================================================*/
@@ -200,6 +208,8 @@ pre {
 
 .navbar-header {
 	text-align: center;
+	font-size: 20px;
+	padding: 14px;
 
 	li {
 		height: 56px;
@@ -240,6 +250,7 @@ pre {
 			&:hover > a {
 				color: @theme-color;
 				text-decoration: none;
+				cursor: pointer;
 			}
 
 			&.nav-current {
@@ -274,6 +285,7 @@ pre {
 
 				&:hover > a {
 					color: @theme-color;
+					cursor: pointer;
 				}
 			}
 
@@ -314,11 +326,30 @@ pre {
 		}
 	}
 
+	.roundup {
+		position: absolute;
+		background: #b0b0b0;
+		color: #FFFFFF;
+		text-align: center;
+		top: -12px;
+		right: -32px;
+		width: 80px;
+		height: 40px;
+		line-height: 54px;
+		transform: rotate(45deg);
+
+		& > .svg-inline--fa {
+			.transform(rotate(-45deg));
+		}
+	}
+
+
+
 	.post-head {
 		text-align: center;
 
 		.post-title {
-			margin: 20px 0;
+			margin: 0 0 20px;
 			line-height: 1.1em;
 
 			a {
@@ -336,9 +367,15 @@ pre {
 			font-style: italic;
 			color: @text-color-light;
 			margin: 14px 0;
+			font-size: 14px;
+
+			img {
+				height: 14px;
+				width: 14px;
+			}
 
 			span {
-				margin: 0 7px;
+				margin: 0 10px;
 				white-space: nowrap;
 			}
 
@@ -367,6 +404,11 @@ pre {
 	.post-content {
 		margin: 30px 0;
 
+		iframe {
+			margin: 10px auto;
+			display: block;
+		}
+
 		img {
 			max-width: 100%;
 			margin-bottom: 14px;
@@ -384,43 +426,43 @@ pre {
 		}
 	}
 
-		.tag-list {
+	.tag-list {
+		color: @text-color-light;
+		margin-top: 10px;
+
+		a {
 			color: @text-color-light;
-			margin-top: 10px;
+			margin-left: 7px;
+			font-weight: 100;
+			font-size: 14px;
 
-			a {
-				color: @text-color-light;
-				margin-left: 7px;
-				font-weight: 100;
-				font-size: 14px;
-
-				&:hover {
-					color: @theme-color;
-				}
+			&:hover {
+				color: @theme-color;
 			}
 		}
+	}
 
-		.share {
-			.share-icons {
-				padding: 0;
-				margin: 0;
+	.share {
+		.share-icons {
+			padding: 0;
+			margin: 0;
 
-				li {
-					list-style: none;
-					display: inline-block;
-					list-style: none;
-					display: inline-block;
-					/* width: 38px; */
-					/* height: 29px; */
-					line-height: 28px;
-					border: 1px solid @border-color;
-					font-size: 15px;
-					padding: 0px 7px;
+			li {
+				list-style: none;
+				display: inline-block;
+				list-style: none;
+				display: inline-block;
+				/* width: 38px; */
+				/* height: 29px; */
+				line-height: 28px;
+				border: 1px solid @border-color;
+				font-size: 15px;
+				padding: 0 7px;
 
-					a {
-						color: @text-color-light;
-						text-align: center;
-						/*
+				a {
+					color: #c4c4c4;
+					text-align: center;
+					/*
 						li {
 							width: 28px;
 							height: 28px;
@@ -430,18 +472,17 @@ pre {
 							.transition(all 0.2s ease);
 							font-size: 12px;
 						}*/
-
-						&:hover {
-							li {
-								color: @white;
-								background: @theme-color;
-								border: 1px solid @theme-color;
-							}
+					&:hover {
+						li {
+							color: @white;
+							background: @theme-color;
+							border: 1px solid @theme-color;
 						}
 					}
 				}
 			}
 		}
+	}
 }
 /*====================================================
 	pagination
@@ -514,7 +555,7 @@ pre {
 		margin-bottom: 7px;
 
 		span {
-			margin-right: 14px;
+			margin-right: 20px;
 			white-space: nowrap;
 
 			svg {
@@ -583,7 +624,7 @@ pre {
 		padding: 0;
 		margin: 0;
 		display: flex;
-    justify-content: space-between;
+		justify-content: space-between;
 
 		li {
 			display: inline-block;
@@ -597,7 +638,7 @@ pre {
 					border: 1px solid @border-color;
 					color: @text-color-light;
 					.transition(all 0.2s);
-					    padding: 8px;
+					padding: 8px;
 				}
 
 				&:hover {
@@ -650,6 +691,10 @@ pre {
 			.date {
 				font-style: italic;
 				color: @text-color-light;
+
+				.svg-inline--fa {
+					margin-right: 5px;
+				}
 			}
 
 			&:last-child {
@@ -660,7 +705,7 @@ pre {
 
 	.newsletter {
 		.input-group {
-			margin-bottom: 10px;
+			margin-bottom: 20px;
 			display: block;
 
 			.email {
@@ -796,10 +841,15 @@ pre {
 	padding-top: 28px;
 	padding-bottom: 28px;
 	border-top: 1px solid @text-color-heading;
+
+	.rights {
+		margin-top: 15px;
+		opacity: 0.5;
+	}
 }
 
 p {
-	margin-bottom: 20px
+	margin-bottom: 20px;
 }
 
 #back-to-top {
@@ -890,7 +940,7 @@ p {
 /*====================================================
 	media query
 ====================================================*/
-@media (max-width:767px) {
+@media (max-width:1000px) {
 	.sidebar {
 		display: none;
 	}
