--- a/partials/about-author.hbs
+++ b/partials/about-author.hbs
@@ -8,17 +8,17 @@
 	{{/if}}
 	<div class="details">
 		<div class="author">
-			{{t "About"}} <a href="{{url}}">{{name}}</a>
+			{{!--{{t "About"}}--}} <a href="{{url}}">{{name}}</a>
 		</div>
 		<div class="meta-info">
 			{{#if location}}
 				<span class="loaction"><i class="fal fa-home"></i>{{location}}</span>
 			{{/if}}
 			{{#if website}}
-			<span class="website"><i class="fal fa-globe"></i><a href="{{website}}" targer="_BLANK">{{t "Website"}}</a></span>
+			<span class="website"><a href="{{website}}" targer="_BLANK"><i class="fal fa-globe"></i>{{t "Website"}}</a></span>
 			{{/if}}
 			{{#if twitter}}
-			<span class="twitter"><a href="{{twitter_url}}"><i class="fab fa-twitter"></i></a></span>
+			<span class="twitter"><a href="{{twitter_url}}"><i class="fab fa-twitter"></i> {{twitter}}</a></span>
 			{{/if}}
 			{{#if facebook}}
 			<span class="facebook"><a href="{{facebook_url}}"><i class="fab fa-facebook"></i></a></span>
