--- a/partials/cover-author.hbs
+++ b/partials/cover-author.hbs
@@ -10,15 +10,15 @@
 		{{author.name}}
 	</h3>
 	<div class="meta-info">
-		<span class="post-count"><i class="fa fa-pencil-square-o"></i>{{plural pagination.total empty=(t "No Post") singular=(t "1 Post") plural=(t "% Posts")}}</span>
+		<span class="post-count"><i class="fal fa-pencil"></i>{{plural pagination.total empty=(t "No Post") singular=(t "1 Post") plural=(t "% Posts")}}</span>
 		{{#if author.location}}
-		<span class="loaction"><i class="fa fa-map-marker"></i>{{author.location}}</span>
+		<span class="loaction"><i class="fal fa-map-marker-alt"></i>{{author.location}}</span>
 		{{/if}}
 		{{#if author.website}}
-		<span class="website"><i class="fa fa-globe"></i><a href="{{author.website}}" targer="_BLANK">{{t "Website"}}</a></span>
+		<span class="website"><i class="fal fa-globe"></i><a href="{{author.website}}" targer="_BLANK">{{t "Website"}}</a></span>
 		{{/if}}
 		{{#if author.twitter}}
-		<span class="twitter"><a href="{{author.twitter_url}}"><i class="fa fa-twitter"></i></a></span>
+		<span class="twitter"><a href="{{author.twitter_url}}"><i class="fab fa-twitter"></i> {{author.twitter}}</a></span>
 		{{/if}}
 		{{#if author.facebook}}
 		<span class="facebook"><a href="{{author.facebook_url}}"><i class="fa fa-facebook"></i></a></span>
