--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -6,11 +6,19 @@
 		<i class="fa fa-star"></i>
 	</div>
 	{{/if}}
+
+	{{#has tag="roundup"}}
+	<div class="roundup">
+		<i class="far fa-link"></i>
+	</div>
+	{{/has}}
+
+
 	<div class="post-head">
 		<h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
 		<div class="post-meta">
-			<span class="author">{{t "By"}} {{authors separator=", "}}</span> &bull;
-			<span class="date">{{date format="MMMM DD, YYYY"}}</span><!-- &bull;
+			<span class="author"><i class="far fa-user"></i> {{authors separator=", "}}</span>
+			<span class="date"><i class="fal fa-calendar"></i> {{date format="MMMM DD"}}</span><!-- &bull;
 			<span class="comment-count"><a href="{{url}}#disqus_thread">{{t "0 Comments"}}</a></span>-->
 		</div>
 	</div>
@@ -20,6 +28,9 @@
 	</div>
 	{{/if}}
 	<div class="post-content">
+		{{#has tag="video"}}
+			{{content}}
+		{{/has}}
 		{{excerpt}}
 	</div>
 	<div class="post-permalink">
