--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -7,7 +7,7 @@
 	{{> widget-tagcloud}}
 	{{!-- {{> widget-facebook}} --}}
 	{{> widget-twitter}}
-	{{> widget-google-plus}}
+	{{!-- {{> widget-google-plus}} --}}
 
 </div>
 <!-- end sidebar -->
