--- a/partials/widget-text.hbs
+++ b/partials/widget-text.hbs
@@ -2,6 +2,8 @@
 <div class="widget">
 	<h4 class="title">Welcome</h4>
 	<div class="content">
-This is our a community of friends who like to build things, with programming is being the means to that end. Our passion for creating is matching only by an appreciation for the small moments we call life. </div>
+		<p>We're a collective of unprofessional professionals who like to build things.</p>
+		<p>While we may be developers, programming is merely the means to an end, which is to enhance the small moments we call life.</p>
+	 </div>
 </div>
 <!-- end widget -->
