--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -12,12 +12,13 @@
 ====================================================*/
 body,
 html {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'proxima-nova', sans-serif;
   font-size: 14px;
   color: #505050;
   line-height: 1.75em;
   background: #ebebeb;
   position: relative;
+  font-weight: 200;
 }
 body {
   width: 100%;
@@ -48,14 +49,37 @@ h1 {
   font-size: 3em;
   font-weight: 800;
 }
+@media (max-width: 600px) {
+  .h1,
+  h1 {
+    font-size: 2em;
+  }
+}
 .h2,
 h2 {
   font-size: 2.3em;
   font-weight: 400;
   font-family: 'Montserrat';
 }
+@media (max-width: 600px) {
+  .h2,
+  h2 {
+    font-size: 1.5em;
+    font-weight: 300;
+  }
+}
 .home-template h2 {
   font-weight: 800 !important;
+}
+@media (max-width: 600px) {
+  .home-template h2 {
+    font-size: 2em;
+  }
+}
+.home-template .main-content {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 .h3,
 h3 {
@@ -82,6 +106,11 @@ h6 {
   margin: 0 0 20px;
   line-height: 1em;
   color: #303030;
+}
+@media (max-width: 600px) {
+  .post-title .h2 {
+    font-size: 2em;
+  }
 }
 a {
   color: #00ada7;
@@ -293,6 +322,9 @@ pre {
   position: relative;
   overflow: hidden;
 }
+.post.featured {
+  /*order: 1;*/
+}
 .post .featured {
   position: absolute;
   background: #00ada7;
@@ -308,6 +340,7 @@ pre {
   -ms-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
+  font-size: 12px;
 }
 .post .featured i {
   -webkit-transform: rotate(-45deg);
@@ -318,8 +351,8 @@ pre {
 }
 .post .roundup {
   position: absolute;
-  background: #b0b0b0;
-  color: #FFFFFF;
+  background: #c9c9c9;
+  color: #ffffff;
   text-align: center;
   top: -12px;
   right: -32px;
@@ -328,7 +361,7 @@ pre {
   line-height: 54px;
   transform: rotate(45deg);
 }
-.post .roundup > .svg-inline--fa {
+.post .roundup i {
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
   -ms-transform: rotate(-45deg);
@@ -355,12 +388,15 @@ pre {
   margin: 14px 0;
   font-size: 14px;
 }
+.post .post-head .post-meta .date {
+  margin-left: 20px;
+}
 .post .post-head .post-meta img {
   height: 14px;
   width: 14px;
 }
 .post .post-head .post-meta span {
-  margin: 0 10px;
+  margin: 0;
   white-space: nowrap;
 }
 .post .post-head .post-meta .comment-count {
@@ -380,9 +416,13 @@ pre {
 }
 .post .post-content {
   margin: 30px 0;
+  overflow-x: hidden;
+}
+.post .post-content .fluid-width-video-wrapper {
+  margin: 0;
 }
 .post .post-content iframe {
-  margin: 10px auto;
+  margin: 0;
   display: block;
 }
 .post .post-content img {
@@ -401,12 +441,13 @@ pre {
 .post .tag-list {
   color: #959595;
   margin-top: 10px;
+  font-size: 14px;
+  margin-right: 5px;
 }
 .post .tag-list a {
   color: #959595;
-  margin-left: 7px;
-  font-weight: 100;
-  font-size: 14px;
+  font-weight: 300;
+  font-size: 16px;
 }
 .post .tag-list a:hover {
   color: #00ada7;
@@ -460,7 +501,7 @@ pre {
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
-  padding: 5px 15px;
+  padding: 2px 7px;
 }
 .pagination a:hover {
   background: #505050;
@@ -470,7 +511,7 @@ pre {
 .pagination .page-number {
   background: #00ada7;
   color: #FFFFFF;
-  margin: 0 3px;
+  margin: 0 5px;
   display: inline-block;
   line-height: 36px;
   padding: 0 14px;
@@ -493,8 +534,19 @@ pre {
   -moz-border-radius: 50%;
   border-radius: 50%;
 }
+@media (max-width: 600px) {
+  .about-author .avatar {
+    width: 70px;
+    height: 70px;
+  }
+}
 .about-author .details {
   margin-left: 114px;
+}
+@media (max-width: 600px) {
+  .about-author .details {
+    margin-left: 90px;
+  }
 }
 .about-author .author {
   font-size: 1.5em;
@@ -509,10 +561,10 @@ pre {
   margin-bottom: 7px;
 }
 .about-author .meta-info span {
-  margin-right: 20px;
+  margin-right: 30px;
   white-space: nowrap;
 }
-.about-author .meta-info span svg {
+.about-author .meta-info span i {
   margin-right: 7px;
 }
 .comment-wrap {
@@ -569,7 +621,7 @@ pre {
   display: inline-block;
   text-align: center;
 }
-.widget .social li a svg {
+.widget .social li a i {
   width: 35px;
   height: 35px;
   line-height: 35px;
@@ -580,9 +632,8 @@ pre {
   -ms-transition: all 0.2s;
   -o-transition: all 0.2s;
   transition: all 0.2s;
-  padding: 8px;
 }
-.widget .social li a:hover svg {
+.widget .social li a:hover i {
   color: #FFFFFF;
   background: #00ada7;
   border: 1px solid #00ada7;
@@ -628,7 +679,7 @@ pre {
   font-style: italic;
   color: #959595;
 }
-.widget .recent-post .recent-single-post .date .svg-inline--fa {
+.widget .recent-post .recent-single-post .date i {
   margin-right: 5px;
 }
 .widget .recent-post .recent-single-post:last-child {
@@ -706,7 +757,7 @@ pre {
 .cover .meta-info span {
   margin: 0 7px;
 }
-.cover .meta-info span svg {
+.cover .meta-info span i {
   margin-right: 7px;
 }
 .cover .bio {
@@ -751,8 +802,10 @@ pre {
   border-top: 1px solid #303030;
 }
 .copyright .rights {
-  margin-top: 15px;
-  opacity: 0.5;
+  margin-top: 16px;
+  opacity: 0.6;
+  display: block;
+  font-size: 12px;
 }
 p {
   margin-bottom: 20px;
@@ -807,7 +860,7 @@ p {
 .tag-wrapper a .bg-wrapper .overlay .tag-title {
   color: #FFFFFF;
 }
-.tag-wrapper a .bg-wrapper .overlay .meta-info svg {
+.tag-wrapper a .bg-wrapper .overlay .meta-info i {
   margin-right: 7px;
 }
 .tag-wrapper a .bg-wrapper .overlay .description {
@@ -868,4 +921,10 @@ p {
 .fluid-width-video-wrapper {
   padding-top: 0 !important;
   height: 400px;
+}
+.page iframe {
+  margin: 0 auto !important;
+}
+.post .tag-list {
+  margin: 3px;
 }
