--- a/default.hbs
+++ b/default.hbs
@@ -10,8 +10,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<!-- stylesheets -->
 	{{! Styles'n'Scripts }}
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:600,700|Open+Sans:300,400,500" rel="stylesheet">
-	<script defer src="https://pro.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-+1nLPoB0gaUktsZJP+ycZectl3GX7wP8Xf2PE/JHrb7X1u7Emm+v7wJMbAcPr8Ge" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:600,700" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.typekit.net/okj4emy.css">
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-KwxQKNj2D0XKEW5O/Y6haRH39PE/xry8SAoLbpbCMraqlX7kUP6KHOnrlrtvuJLR" crossorigin="anonymous">
+
+
 	<link rel="stylesheet" href="{{asset "css/bootstrap.min.css"}}">
 	<link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}">
 	<link rel="stylesheet" type="text/css" href="{{asset "css/hl-styles/monokai_sublime.css"}}">
