--- a/partials/copyright.hbs
+++ b/partials/copyright.hbs
@@ -3,8 +3,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				<span>{{t "Copyright"}} &copy; {{date format="YYYY"}}, <a href="{{@blog.url}}">{{@blog.title}}</a><span><br>
-				<span class="rights">{{t "All right Reserved"}}</span>
+				<span>{{t "Copyright"}} &copy; {{date format="YYYY"}}, <a href="{{@blog.url}}">{{@blog.title}}</a></span><br>
+				<span class="rights">All rights Reserved.</span>
 			</div>
 		</div>
 	</div>
