--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -18,7 +18,7 @@
 		<h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
 		<div class="post-meta">
 			<span class="author"><i class="far fa-user"></i> {{authors separator=", "}}</span>
-			<span class="date"><i class="fal fa-calendar"></i> {{date format="MMMM DD"}}</span><!-- &bull;
+			<span class="date"><i class="fal fa-calendar"></i> <span>{{date format="MMMM DD"}}</span></span><!-- &bull;
 			<span class="comment-count"><a href="{{url}}#disqus_thread">{{t "0 Comments"}}</a></span>-->
 		</div>
 	</div>
@@ -28,7 +28,7 @@
 	</div>
 	{{/if}}
 	<div class="post-content">
-		{{#has tag="video"}}
+		{{#has tag="#video"}}
 			{{content}}
 		{{/has}}
 		{{excerpt}}
@@ -37,7 +37,7 @@
 		<div class="pull-left tag-list">
 			{{#if tags}}
 			<i class="fal fa-tags"></i>
-			{{tags separator=","}}
+			{{tags limit="1"}}
 			{{/if}}
 		</div>
 		<a href="{{url}}" class="btn btn-default">{{t "Continue Reading"}}</a>
