--- a/partials/widget-text.hbs
+++ b/partials/widget-text.hbs
@@ -2,7 +2,7 @@
 <div class="widget">
 	<h4 class="title">Welcome</h4>
 	<div class="content">
-		<p>We're a collective of unprofessional professionals who like to build things.</p>
+		<p style="font-weight: 600;">We're a collective of unprofessional professionals who like to build things.</p>
 		<p>While we may be developers, programming is merely the means to an end, which is to enhance the small moments we call life.</p>
 	 </div>
 </div>
