--- a/assets/css/less_parts/variables.less
+++ b/assets/css/less_parts/variables.less
@@ -1,13 +1,15 @@
 /*====================================================
 	COLOR VARIABLE FOR THEME
 ====================================================*/
-@theme-color: #00ada7;				// theme color
-@bg-color: #ebebeb;					// Background color / secndary theme color 
+@theme-color: #00ada7;        // theme color
+@secondary-color: #00b1d1;				// theme color
+@hover-color: #003e7c;
+@bg-color: #ebebeb;					// Background color / secndary theme color
 @bg-color-light: #e0ecef;			// Light background color
 @bg-color-footer: #202020;			// Footer background color
 @bg-color-footer-dark: #111111;		// Footer dark background color
 @text-color: #505050;				// Main text color
-@text-color-heading: #303030;		// Heading text color
+@text-color-heading: #171d51;		// Heading text color
 @text-color-light: #959595;			// Light text color
 @border-color: #ebebeb;
 @black: #000000;					// Pure black
