--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -39,7 +39,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Montserrat', serif;
+	font-family: 'mr-eaves-xl-modern', serif;
 	font-weight: 700;
 	color: @text-color-heading;
 }
@@ -56,9 +56,9 @@ h1 {
 
 .h2,
 h2 {
-	font-size: 2.3em;
+	font-size: 3em;
 	font-weight: 400;
-	font-family: 'Montserrat';
+	font-family: 'mr-eaves-xl-modern';
 
 	@media(max-width: 600px){
 		font-size: 1.5em;
@@ -94,7 +94,12 @@ h4 {
 
 .h5,
 h5 {
-	font-size: 1em;
+	font-size: 1.6em;
+	font-weight: 500;
+	margin: 0;
+	font-family: 'mr-eaves-xl-modern', serif;
+	color: @text-color-light-heading;
+	line-height: 1;
 }
 
 .h6,
@@ -106,7 +111,7 @@ h6 {
 	text-align: left;
 	font-size: 3.5em;
 	font-weight: 700;
-	margin: 0 0 20px;
+	margin: 0;
 	line-height: 1em;
 	color: #303030;
 
@@ -176,7 +181,7 @@ textarea {
 
 blockquote {
 	border-left: 4px solid @theme-color;
-	font-family: 'Montserrat', serif;
+	font-family: 'mr-eaves-xl-modern', serif;
 	font-style: italic;
 }
 
@@ -203,6 +208,10 @@ pre {
 	.featured-media {
 		display: none;
 	}
+
+	.post-head {
+		border-bottom: 1px solid #e9e9e9;
+	}
 }
 /*====================================================
 	header
@@ -214,7 +223,7 @@ pre {
 
 	.branding {
 		font-size: 3.5em;
-		font-family: 'Montserrat', serif;
+		font-family: 'mr-eaves-xl-modern', serif;
 		color: @text-color-heading;
 
 		&:hover {
@@ -265,8 +274,11 @@ pre {
 				// text-transform: capitalize;
 				line-height: 4em;
 				display: block;
-				padding: 0 21px;
-				font-family: 'Montserrat', serif;
+				padding: 0 20px;
+				font-family: 'mr-eaves-xl-modern', serif;
+				text-transform: uppercase;
+				font-size: 17px;
+				font-weight: 600;
 			}
 
 			&:hover > a {
@@ -377,8 +389,8 @@ pre {
 		text-align: center;
 
 		.post-title {
-			margin: 0 0 20px;
-			line-height: 1.1em;
+			margin: 0;
+			line-height: 1em;
 
 			a {
 				color: @text-color-heading;
@@ -391,14 +403,18 @@ pre {
 		}
 
 		.post-meta {
-			// font-family: 'Montserrat', serif;
+			// font-family: 'mr-eaves-xl-modern', serif;
 			font-style: italic;
 			color: @text-color-light;
-			margin: 14px 0;
-			font-size: 14px;
+			margin: 18px 0;
+			font-size: 12px;
 
 			.date {
 				margin-left: 20px;
+
+				i {
+					margin-right: 5px;
+				}
 			}
 
 			img {
@@ -473,10 +489,17 @@ pre {
 		font-size: 14px;
 		margin-right: 5px;
 
+		i {
+			color: @text-color-heading;
+			margin-right: 5px;
+			opacity: .6;
+		}
+
 		a {
-			color: @text-color-light;
-			font-weight: 300;
+			color: @text-color-heading;
+			font-weight: 600;
 			font-size: 16px;
+			opacity: .6;
 
 			&:hover {
 				color: @theme-color;
@@ -546,7 +569,7 @@ pre {
 		padding: 2px 7px;
 
 		&:hover {
-			background: @text-color;
+			background: @hover-color;
 			text-decoration: none;
 			color: @white;
 		}
@@ -639,6 +662,9 @@ pre {
 		background: @white;
 		padding: 21px 30px;
 	}
+	.text {
+		font-size: 16px;
+	}
 }
 
 .main-footer {
@@ -730,8 +756,10 @@ pre {
 
 			.post-title {
 				color: @text-color;
-				font-family: 'Montserrat', serif;
+				font-family: 'mr-eaves-xl-modern', serif;
 				.transition(all 0.2s ease);
+				font-size: 18px;
+    		font-weight: 600;
 
 				&:hover {
 					color: @theme-color;
@@ -742,6 +770,7 @@ pre {
 			.date {
 				font-style: italic;
 				color: @text-color-light;
+				font-size: 12px;
 
 				i {
 					margin-right: 5px;
@@ -766,6 +795,11 @@ pre {
 			.btn {
 				width: 100%;
 			}
+		}
+
+		p {
+			margin-bottom: 10px;
+			font-size: 16px;
 		}
 	}
 
@@ -1048,4 +1082,37 @@ p {
 	.tag-list {
 		margin: 3px;
 	}
+}
+
+.home-template {
+	.kg-card-markdown * {
+		display:none;
+	}
+
+	.kg-card-markdown {
+		p, a, iframe {
+			display:inherit !important;
+		}
+	}
+
+	a {
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
+
+	.tag-video {
+
+	.fluid-width-video-wrapper {
+		display: block !important;
+	}
+
+	.post-permalink {
+		display: none;
+	}
+
+	.post-content {
+		margin: 30px 0 5px;
+	}
+}
 }
