--- a/partials/widget-text.hbs
+++ b/partials/widget-text.hbs
@@ -1,5 +1,5 @@
 <!-- start widget -->
-<div class="widget">
+<div class="widget text">
 	<h4 class="title">Welcome</h4>
 	<div class="content">
 		<p style="font-weight: 600;">We're a collective of unprofessional professionals who like to build things.</p>
