--- a/assets/css/less_parts/variables.less
+++ b/assets/css/less_parts/variables.less
@@ -9,7 +9,8 @@
 @bg-color-footer: #202020;			// Footer background color
 @bg-color-footer-dark: #111111;		// Footer dark background color
 @text-color: #505050;				// Main text color
-@text-color-heading: #171d51;		// Heading text color
+@text-color-heading: #171a30;
+@text-color-light-heading: #525568;		// Heading text color
 @text-color-light: #959595;			// Light text color
 @border-color: #ebebeb;
 @black: #000000;					// Pure black
