--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -16,6 +16,7 @@
 
 	<div class="post-head">
 		<h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
+		<h5>{{excerpt}}</h5>
 		<div class="post-meta">
 			<span class="author"><i class="far fa-user"></i> {{authors separator=", "}}</span>
 			<span class="date"><i class="fal fa-calendar"></i> <span>{{date format="MMMM DD"}}</span></span><!-- &bull;
@@ -28,10 +29,7 @@
 	</div>
 	{{/if}}
 	<div class="post-content">
-		{{#has tag="#video"}}
-			{{content}}
-		{{/has}}
-		{{excerpt}}
+			{{content words="50"}}
 	</div>
 	<div class="post-permalink">
 		<div class="pull-left tag-list">
